fix overflow-x-clip for navbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -169,7 +169,6 @@
     overflow-x: clip;
   }
   body {
-    overflow-x: hidden;
     font-family: var(--font-dm-sans);
   }
   h1, h2, h3, h4, h5, h6 {
